--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     "mlflow>=3.0.0,<4.0.0",
+    "sqlalchemy>=2.0.0",
 ]
 
 [project.optional-dependencies]
