Docs: Update documentation URL to https://docs.klad.ml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ all = [
 
 [project.urls]
 Homepage = "https://github.com/kladml/kladml"
-Documentation = "https://kladml.github.io/docs"
+Documentation = "https://docs.klad.ml"
 Repository = "https://github.com/kladml/kladml.git"
 Issues = "https://github.com/kladml/kladml/issues"
 
