docs: reorganize roadmap and remove platform references
- Added public roadmap (docs/roadmap.md) with v0.6-v1.0 planned features
- Moved internal docs to private_docs/ (gitignored)
- Removed all Platform references from public documentation
- Updated README with data types table and quickstart examples
- Added examples/ to gitignore (volant scripts to be integrated)
- Reorganized roadmap priorities: CLI Commands → Phase 3, Quickstart → Phase 8
- Updated CHANGELOG for v0.5.2

BREAKING: None

--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,6 @@ mlflow.db
 # KladML local data and outputs
 /data/
 /artifacts/
-/scripts/
 
 # Training outputs (will be in data/ after cleanup)
 data/projects/
@@ -89,7 +88,11 @@ data/models/
 data/logs/
 projects/
 models/
+models/
 *.log
+
+# Private / Experimental Architectures
+src/kladml/architectures/
 
 # Generated version file
 src/kldml/_version.py
@@ -98,3 +101,14 @@ src/kladml/_version.py
 # OS
 .DS_Store
 Thumbs.db
+
+# Temporary Data
+temp_chunks/
+__pycache__/
+*.parquet
+*.h5
+
+private_docs/
+
+# Examples (volant scripts to be integrated into CLI)
+examples/
