--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ repo_name: kladml/kladml
 
 theme:
   name: material
-  logo: assets/images/logo.png
+  logo: assets/images/logo_full.png
   favicon: assets/images/logo.png
   palette:
     - scheme: default
