--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,13 @@ httpx>=0.25.0
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
 
-# Tracking
+# Tracking & DB
 mlflow>=3.0.0,<4.0.0
+sqlmodel>=0.0.14
+sqlalchemy>=2.0.0
+
+# TUI
+textual>=0.40.0
 
 # Export / Deployment
 onnx>=1.14.0
