fix: update pyproject.toml license configuration for PyPI compliance

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,11 @@ readme = "README.md"
 authors = [
     {name = "KladML Team", email = "marcello@netcaring.com"},
 ]
-license = {text = "MIT"}
+license = "MIT"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
