refactor: restructure dependencies and fix MPS test detection

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,22 +20,22 @@ classifiers = [
 ]
 requires-python = ">=3.9,<3.14"
 dependencies = [
-    "numpy>=1.21.0",
     "pyyaml>=6.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
     "sqlalchemy>=2.0.0",
     "sqlmodel>=0.0.14",
-    "torch>=2.0.0",
-    "onnx>=1.14.0",
-    "onnxruntime>=1.15.0",
+    "typer[all]>=0.9.0",
+    "rich>=13.0.0",
+    "platformdirs>=3.0.0",
 ]
 
 [project.optional-dependencies]
-cli = [
-    "typer[all]>=0.9.0",
-    "rich>=13.0.0",
-    "textual>=0.40.0",
+train = [
+    "torch>=2.0.0",
+    "numpy>=1.21.0",
+    "onnx>=1.14.0",
+    "onnxruntime>=1.15.0",
 ]
 tracking = [
     "mlflow>=3.0.0,<4.0.0",
@@ -48,10 +48,7 @@ dev = [
     "twine>=4.0.0",
 ]
 all = [
-    "typer[all]>=0.9.0",
-    "rich>=13.0.0",
-    "textual>=0.40.0",
-    "mlflow>=3.0.0,<4.0.0",
+    "kladml[train,tracking,dev]",
 ]
 
 [project.urls]
