--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,10 +36,16 @@ train = [
     "numpy>=1.21.0",
     "onnx>=1.14.0",
     "onnxruntime>=1.15.0",
+    "h5py>=3.0.0",
+    "onnxscript>=0.1.0",
 ]
 tracking = [
     "mlflow>=3.0.0,<4.0.0",
 ]
+
+
+
+
 dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
