--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,13 @@ classifiers = [
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
+
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
-requires-python = ">=3.9,<3.14"
+requires-python = ">=3.10,<3.14"
 dependencies = [
     "pyyaml>=6.0",
     "pydantic>=2.0.0",
@@ -28,6 +28,7 @@ dependencies = [
     "typer[all]>=0.9.0",
     "rich>=13.0.0",
     "platformdirs>=3.0.0",
+    "loguru>=0.7.0",
 ]
 
 [project.optional-dependencies]
@@ -78,7 +79,7 @@ where = ["src"]
 
 [tool.ruff]
 line-length = 88
-target-version = "py39"
+target-version = "py310"
 
 [tool.ruff.lint]
 select = ["E", "F", "B", "I"]
