--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "sqlmodel>=0.0.16",
     "typer[all]>=0.9.0",
     "rich>=13.0.0",
+    "accelerate>=0.24.0",
     "platformdirs>=3.0.0",
     "loguru>=0.7.0",
 ]
