--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ rich>=13.0.0
 httpx>=0.25.0
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
+accelerate>=0.24.0
 
 # Tracking & DB
 mlflow>=2.14.0,<3.0.0
