--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ train = [
     "onnxscript>=0.1.0",
     "matplotlib>=3.7.0",
     "torchmetrics>=1.0.0",
+    "polars>=0.19.0",
+    "pyarrow>=14.0.0",
 ]
 tracking = [
     "mlflow>=2.14.0,<3.0.0",
