--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ numpy>=1.21.0
 pyyaml>=6.0
 torch>=2.0.0
 
+# Data Engineering
+polars>=0.19.0
+pyarrow>=14.0.0
+
 # CLI
 typer[all]>=0.9.0
 rich>=13.0.0
